# src/test/resources/greensopinion/swagger/jaxrsgen/model/ServiceTest_serializedForm.json
@@ -6,7 +6,7 @@
   "description": "Operations about pets",
   "apis": [
     {
-      "path": "/pets",
+      "path": "/pet",
       "description": "Operations about pets",
       "operations": [
         {
@@ -53,7 +53,7 @@
               "name": "body",
               "required": true,
               "allowMultiple": false,
-              "type": "NewPet",
+              "type": "PetValues",
               "paramType": "body"
             }
           ]
@@ -61,7 +61,7 @@
       ]
     },
     {
-      "path": "/pets/{id}",
+      "path": "/pet/{id}",
       "description": "Operations about pets",
       "operations": [
         {
@@ -86,7 +86,8 @@
           "responseMessages": [
             {
               "code": 404,
-              "message": "Pet not found"
+              "message": "Pet not found",
+              "responseModel": "ServerError"
             }
           ]
         },
@@ -112,7 +113,8 @@
           "responseMessages": [
             {
               "code": 404,
-              "message": "Pet not found"
+              "message": "Pet not found",
+              "responseModel": "ServerError"
             }
           ]
         },
@@ -145,11 +147,141 @@
           "responseMessages": [
             {
               "code": 404,
-              "message": "Pet not found"
+              "message": "Pet not found",
+              "responseModel": "ServerError"
             }
           ]
         }
       ]
     }
-  ]
+  ],
+  "models": {
+    "Pet": {
+      "id": "Pet",
+      "required": [
+        "id",
+        "name",
+        "kind"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string",
+          "description": "The name of the pet"
+        },
+        "kind": {
+          "type": "PetKind",
+          "description": "The kind of pet",
+          "enum": [
+            "DOG",
+            "CAT",
+            "REPTILE",
+            "FISH",
+            "HORSE",
+            "OTHER"
+          ]
+        },
+        "notes": {
+          "type": "string"
+        }
+      }
+    },
+    "PetHandle": {
+      "id": "PetHandle",
+      "required": [
+        "id"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string",
+          "description": "The name of the pet"
+        }
+      }
+    },
+    "PetListing": {
+      "id": "PetListing",
+      "description": "A listing of pets",
+      "required": [],
+      "properties": {
+        "start": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The 0-based start index offset."
+        },
+        "count": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The number of pets requested.  May differ from the actual number of pets in the listing."
+        },
+        "total": {
+          "type": "integer",
+          "format": "int32",
+          "description": "The total number of pets in the system that correspond to the listing."
+        },
+        "pets": {
+          "type": "List",
+          "items": {
+            "$ref": "PetHandle"
+          },
+          "description": "The list of pet handles."
+        }
+      }
+    },
+    "PetValues": {
+      "id": "PetValues",
+      "required": [
+        "name",
+        "kind"
+      ],
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "The name of the pet"
+        },
+        "kind": {
+          "type": "PetKind",
+          "description": "The kind of pet",
+          "enum": [
+            "DOG",
+            "CAT",
+            "REPTILE",
+            "FISH",
+            "HORSE",
+            "OTHER"
+          ]
+        },
+        "notes": {
+          "type": "string"
+        }
+      }
+    },
+    "ServerError": {
+      "id": "ServerError",
+      "description": "A representation of an error, providing an error code and message.",
+      "required": [
+        "code"
+      ],
+      "properties": {
+        "code": {
+          "type": "string",
+          "description": "The error code, which can be used to identify the type of error."
+        },
+        "message": {
+          "type": "string",
+          "description": "The message describing the error."
+        },
+        "detail": {
+          "type": "string",
+          "description": "Detail of the error which can be used for diagnostic purposes."
+        }
+      }
+    }
+  }
 }
